upgraded code and dependencies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.data.mongodb.database=test
 
 spring.profiles.active=dev
 
+spring.sleuth.annotation.enabled=true
+
 #logging
 logging.level.org.springframework.web=ERROR
 logging.level.org.hibernate=ERROR
@@ -27,12 +29,6 @@ rabbitmq.routingkey=addresseskey
 spring.application.name=addresses
 #server.port=8082
 
-# SSL Details for self signed certificate
-# Generate Self signed SSL running this command from jdk bin directory
-# - keytool -genkey -alias alias_localhost_ssl -keyalg RSA -keysize 2048 -validity 700 -keypass changeit -storepass changeit -keystore localhost_ssl.jks
-# - Export the create certificate in jks format to cacerts file of JDK used by program by using below command
-# - keytool -export -alias alias_localhost_ssl -keystore localhost_ssl.jks -rfc -file selfSigned.cer
-# for debug  -Djavax.net.debug=all -Djavax.net.ssl.trustStore=localhost_ssl.jks
 server.port=8443
 server.ssl.key-alias=alias_localhost_ssl
 server.ssl.key-password=changeit
