--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,14 +18,14 @@ spring.rabbitmq.username=kiran
 spring.rabbitmq.password=kiran
 
 ## Queue and exchange configuration properties for rabbitmq
-rabbitmq.queue=com.vasanti.queue.addresses
-rabbitmq.addresses.request.queue = com.vasanti.addresses.request.queue
-rabbitmq.addresses.response.queue = com.vasanti.addresses.response.queue
-rabbitmq.type.topic.exchange=exchange-topic-vasanti-addresses
+rabbitmq.queue=com.vasanti.queue.Addresses
+rabbitmq.Addresses.request.queue = com.vasanti.Addresses.request.queue
+rabbitmq.Addresses.response.queue = com.vasanti.Addresses.response.queue
+rabbitmq.type.topic.exchange=exchange-topic-vasanti-Addresses
 rabbitmq.type.direct.exchange=exchange-direct-vasanti-exchange
 rabbitmq.routingkey=addresseskey
 
-spring.application.name=addresses
+spring.application.name=Addresses
 #server.port=8082
 
 server.port=8443
